2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support is back with fixed bug which caused problems when
	loading large UML model

2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.override: while loading model, the association can be
	not loaded when accessing opposite property

2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/mainactions.py, po/es.po, po/nl.po:
	Updated. More translations.

2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* po/es.po: Espanish translation, thanks to David Roguin.

2005-04-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemactions.py: reverted to version 1.41.

2005-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: reverted to version 1.60.

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/association.py: use one rotation function (update_dir
	method and xs rotation refactorized), show direction arrow on proper
	side of association name

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support

2005-01-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/pluginmanager.py: use modutils in favor of imp.
	Now actions can be nested in packages!
	Load plugins under namespace gaphor.plugins.

2005-01-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/*/plugin.xml: changed toplevel plugin tag to
	'gaphor-plugin'
	* gaphor/pluginmanager.py: changed xml parser to load new tag.

2005-01-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed bug in Lifeline diagram.

2005-01-11  wrobell <wrobell@pld-linux.org>

	* gaphor/UML/uml2.gaphor: added InternalStructures diagrams

2005-01-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: Use gtk.AccelMap to store accelerator